RESOLVED FIXED17685
CSS3 Selector Test: attribute selector failing to match empty string
https://bugs.webkit.org/show_bug.cgi?id=17685
Summary CSS3 Selector Test: attribute selector failing to match empty string
Eric Seidel (no email)
Reported 2008-03-05 14:00:53 PST
CSS3 Selector Test: attribute selector failing to match empty string .blox9[foo~=""] { background-color: red; } <div class="blox9 unitTest" foo="" title="[~=] attribute selector looking for empty string in empty attribute"></div>
Attachments
test case (213 bytes, text/html)
2008-03-05 15:20 PST, Robert Blaut
no flags
patch for the bug (3.10 KB, patch)
2008-03-23 13:14 PDT, Robert Blaut
eric: review+
Robert Blaut
Comment 1 2008-03-05 15:20:27 PST
Created attachment 19559 [details] test case
Robert Blaut
Comment 2 2008-03-23 13:14:07 PDT
Created attachment 19985 [details] patch for the bug Patch with test case for layout tests attached.
Eric Seidel (no email)
Comment 3 2008-03-23 13:29:56 PDT
Comment on attachment 19985 [details] patch for the bug Looks good to me. I'll fix the comment when landing. // The selector's value can't contain a space, neither can be empty, or it's totally bogus. should be: // Empty selectors or selectors containing spaces are bogus.
Eric Seidel (no email)
Comment 4 2008-03-23 14:09:46 PDT
Note You need to log in before you can comment on or make changes to this bug.