        Reviewed by eseidel.  Landed by eseidel.

Bug 17685: [~=] attribute selector failing to match empty string
        <http://bugs.webkit.org/show_bug.cgi?id=17685>

        Test: fast/css/attribute-selector-empty-value.html

        * css/CSSStyleSelector.cpp:
        (WebCore::CSSStyleSelector::checkOneSelector):


Canonical link: https://commits.webkit.org/24917@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@31238 268f45cc-cd09-0410-ab3c-d52691b4dbfc